--- a/protocol/part2-workflow.qmd
+++ b/protocol/part2-workflow.qmd
@@ -106,7 +106,7 @@ metadata entry. Steps include references to protocol sections providing further 
 
 ---
 
-![**Fig. 2.2.** Reflectance spectroscopy bench setup and optical probe measurements. (A) Benchtop setup with Spectral Evolution NaturaSpec spectroradiometer with herbarium probe measuring a loose leaf fragment on black background. The setup also includes a barcode scanner, a laptop with data acquisition software and display for quality control and recording metadata, 2-inch diameter white and black calibrated reflectance standards, a 2-inch diameter Spectralon® white reference (top removed), a benchtop black background underneath the herbarium sheet, and a tissue annotation label stored in a glassine envelope inside the herbarium sheet packet. (B) Spectral Vista Corporation HR-1024i spectroradiometer and LC-RP Pro leaf clip (with clip removed) measuring a loose leaf fragment over a black background. (C) ASD optical probe measuring mounted tissue with black background slid underneath. Photos A and B by D.M. White; specimen from A: Herbarium of the Arnold Arboretum of Harvard University. Photo C by F. Durgante.](images/fig2.2-probes_SVC-SE-ASDv2.png){#f2-2 fig-align="center"}
+![**Fig. 2.2.** Reflectance spectroscopy bench setup and optical probe measurements. (A) Benchtop setup with Spectral Evolution NaturaSpec spectroradiometer with herbarium probe measuring a loose leaf fragment on black background. The setup also includes a barcode scanner, a laptop with data acquisition software and display for quality control and recording metadata, 2-inch diameter white and black calibrated reflectance standards, a 2-inch diameter Spectralon® white reference (top removed), a benchtop black background underneath the herbarium sheet, and a tissue annotation label stored in a glassine envelope inside the herbarium sheet packet. (B) Spectral Vista Corporation HR-1024i spectroradiometer and LC-RP Pro leaf clip (with clip removed) measuring a loose leaf fragment over a black background. (C) ASD optical probe measuring mounted tissue with black background slid underneath. Photos A and B by D.M. White; specimen from A: Herbarium of the Arnold Arboretum of Harvard University. Photo C by F. Durgante.](images/fig2.2-probes_SVC-SE-ASDv2.jpg){#f2-2 fig-align="center"}
 
 ---
 
