--- a/protocol/part4-metadata.qmd
+++ b/protocol/part4-metadata.qmd
@@ -104,7 +104,7 @@ Fields describing the type, condition, and position of the tissue measured. Incl
 | `comment`                    | - | Optional | Free-text field for recording any additional notes relevant to the measurement, including observations about the instrument, session, specimen, tissue, or data quality that are not captured elsewhere in the metadata.<br> Example: `Amazing specimen.`  | TEXT |
 | `measurementIndex`            | `IDX` | Required | The measurement number index appended to the base filename (Part 3, Table 3.2: IDX) to properly associate each row of metadata with its single, corresponding measurement file.<br> Example: `0001`.               | TEXT |
 
-![**Fig. 4.2**: Diagram of coordinate system for scoring `tissueLocation` in [Table 4.3: Tissue Metadata](#tbl-4.3). Herbarium sheet is placed on top of the benchtop black background with centimeter rulers at top and left sides for '`x,y`' notation of measurement area (white dashed circles) in centimeters with `0,0` at the top left. Black background cards are placed under unglued portions of leaves. From left to right, tissue `TCAB_TN3` has the location `10,26`, tissue `TCAD_TN2` has location `17,16` and tissue `TCAD_TN1` is stored with a label in a glassine envelope inside the packet with location `envelope TCAD_TN1`. For reference, specimen NEBC_00651639 metadata fields are proposed in [Appendix II](appendix2.qmd). Specimen courtesy of the New England Botanical Society.](images/Fig4.2-coordinatesWh.png){#f4-2 fig-align="center"}
+![**Fig. 4.2**: Diagram of coordinate system for scoring `tissueLocation` in [Table 4.3: Tissue Metadata](#tbl-4.3). Herbarium sheet is placed on top of the benchtop black background with centimeter rulers at top and left sides for '`x,y`' notation of measurement area (white dashed circles) in centimeters with `0,0` at the top left. Black background cards are placed under unglued portions of leaves. From left to right, tissue `TCAB_TN3` has the location `10,26`, tissue `TCAD_TN2` has location `17,16` and tissue `TCAD_TN1` is stored with a label in a glassine envelope inside the packet with location `envelope TCAD_TN1`. For reference, specimen NEBC_00651639 metadata fields are proposed in [Appendix II](appendix2.qmd). Specimen courtesy of the New England Botanical Society.](images/Fig4.2-coordinatesWh.jpg){#f4-2 fig-align="center"}
 
 
 ## 4.2 Controlled Vocabularies
