--- a/protocol/part4-metadata.qmd
+++ b/protocol/part4-metadata.qmd
@@ -14,7 +14,14 @@ include-after-body:
 
 This section defines the metadata fields used to describe spectral reflectance measurements of herbarium specimens. This standardization supports interoperability, cross-project data aggregation, and future integration into biodiversity informatics platforms.
 
-Projects can download the **IHerbSpec Metadata Spreadsheet** (available at [doi.org/10.5281/zenodo.18451589](https://doi.org/10.5281/zenodo.18451589)) as a foundation for organizing their metadata. This spreadsheet includes all **required** and optional but **recommended** fields defined in the tables in [Section 4.1](#tbl-4-1). The controlled vocabularies necessary for enumerating certain fields are provided in [Section 4.2](part4-metadata.qmd#controlled-vocabularies). Finally, [Section 4.3](part4-metadata.qmd#guidelines-for-data-archiving-and-sharing) provides general guidelines for data and metadata storage and dissemination.
+| Section | Section Title | Description |
+|---------|-----------------|------------------------------------------------------------|
+| [4.1](part4-metadata.qmd#section4-1) | Metadata Tables | Defines the core metadata tables used in the IHerbSpec Protocol, including Session ([Table 4.1](part4-metadata.qmd#tbl-4-1)), Specimen ([Table 4.2](part4-metadata.qmd#tbl-4-2)), and Tissue ([Table 4.3](part4-metadata.qmd#tbl-4-3)) metadata. |
+| [4.2](part4-metadata.qmd#section4-2) | Controlled Vocabularies | Defines the controlled vocabularies to be applied in metadata fields. Includes Developmental Stage Class Codes ([Table 4.4](#tbl-4-4)), Target Class Codes ([Table 4.5](#tbl-4-5)), Tissue Descriptor Codes ([Table 4.6](#tbl-4-6)), and Background and White Reference Class Codes ([Table 4.7](#tbl-4-7)) |
+| [4.3](part4-metadata.qmd#section4-3) | Guidelines for Data Archiving and Sharing | Guidance on archiving, sharing, and publishing spectral data and metadata, including recommended repositories, formats, and interoperability considerations. |
+
+
+Projects can download the [IHerbSpec Metadata Spreadsheet](tables/IHerbSpec_metadata.csv) as a foundation for organizing their metadata. This spreadsheet includes all **required** and optional but **recommended** fields defined in the tables below. 
 
 While metadata are expected to be disseminated in a flat file format (as in the IHerbSpec Metadata Spreadsheet), fields are presented here in logical groups—project, specimen, and tissue—to support conceptual understanding and integration with local databases.
 
@@ -22,30 +29,34 @@ While metadata are expected to be disseminated in a flat file format (as in the 
 Tables in Part 4 can be downloaded from [iherbspec.github.io/protocol](https://iherbspec.github.io/protocol).
 :::
 
-## 4.1 Metadata Tables
+## 4.1 Metadata Tables {#section4-1}
+
+The three tables below describe the Session, Specimen, and Tissue metadata fields. The “Filename Code” column (e.g., `PI`, `SN`, `SI`, `TC`) indicates the prefix used in filenames for reference (see [Part 3](part3-filenames.qmd)). 
+
+When entering metadata values, the filename code *should not* be prepended to the value (e.g., HUHERYspec1, not PIHUHERYspec1).
 
 ### Table 4.1: Session Metadata {#tbl-4-1}
 
 ::: {.content-visible when-format="html"}
-**Download** [Table4.1.csv](tables/Table4.1-sessonMetadata.csv) 
+**Download** [Table4.1.csv](tables/Table4.1-sessionMetadata.csv) 
 :::
 
-Session metadata are those metadata usually associated globally with a continuous digitization project. These metadata can usually be captured once per project and automatically populated for each measurement instance.
+Session metadata describe the digitization environment and can generally be captured once per project and automatically populated for each measurement instance.
 
 | Metadata Field | Filename Code ([Table 3.2](part3-filenames.qmd#tbl-3-2)) |  Status | Field Description | Data Type |
 |------------|--------|--------|-------------------|-----------|
-| `projectId` | `PI`  | Required | Unique identifier for the spectral measurement project. <br> Example: `HUHERYspec1`. | TEXT |
-| `sessionId` | `SN`  | Required | Unique identifier for a measurement session, generated as `YYYYMMDDHHMM`.<br> Example: `20240617132251`. | TEXT |
-| `instrumentModel` | -  | Required | Spectroradiometer model name.<br> Example: `SVC HR-1024i`. | TEXT |
-| `opticalSetupDescription` | -  | Required | Description of optical probe setup.<br> Example: `LC-RP contact probe with leaf clip removed`. | TEXT |
-| `measurementSettings` | -  | Required | Instrument settings for measurements.<br> Example: `2 seconds, high light setting`. | TEXT |
-| `whiteReferenceDescription` | -  | Required | Material of the white reference.<br> Example: `Spectralon SL Standard 99%`. | TEXT |
+| `projectId` | `PI`  | Required | Unique identifier for the spectral measurement project. <br> Example: `HUHERYspec1` | TEXT |
+| `sessionId` | `SN`  | Required | Unique identifier for a measurement session (e.g. session start time), generated as `YYYYMMDDHHMM`.<br> Example: `20240617132251` | TEXT |
+| `instrumentModel` | -  | Required | Spectroradiometer model name.<br> Example: `SVC HR-1024i` | TEXT |
+| `opticalSetupDescription` | -  | Required | Description of optical probe setup.<br> Example: `LC-RP contact probe with leaf clip removed` | TEXT |
+| `measurementSettings` | -  | Required | Instrument settings for measurements.<br> Example: `2 seconds, high light setting` | TEXT |
+| `whiteReferenceDescription` | -  | Required | Material of the white reference.<br> Example: `Spectralon SL Standard 99%` | TEXT |
 | `operator` | -  | Optional | Name(s) of person(s) conducting measurements. | TEXT |
-| `lightSourceType` | -  | Optional | Light source for optical setup.<br> Example: `tungsten halogen`. | TEXT |
-| `distanceTargetToSensor` | -  | Optional | Distance (mm) between target tissue and sensor face.<br> Example: `12`. | NUMERIC |
-| `lensFieldOfView` | -  | Optional | Angle (degrees) of sensor field of view.<br> Example: `22.5`. | NUMERIC |
-| `angleLightToSensor` | -  | Optional | Angle (degrees) of light source to sensor.<br> Example: `10`. | NUMERIC |
-| `measurementAreaDiameter` | -  | Optional | Diameter (mm) of illuminated tissue area.<br> Example: `6`. | NUMERIC |
+| `lightSourceType` | -  | Optional | Light source for optical setup.<br> Example: `tungsten halogen` | TEXT |
+| `distanceTargetToSensor` | -  | Optional | Distance (mm) between target tissue and sensor face.<br> Example: `12` | NUMERIC |
+| `lensFieldOfView` | -  | Optional | Angle (degrees) of sensor field of view.<br> Example: `22.5` | NUMERIC |
+| `angleLightToSensor` | -  | Optional | Angle (degrees) of light source to sensor.<br> Example: `10` | NUMERIC |
+| `measurementAreaDiameter` | -  | Optional | Diameter (mm) of illuminated tissue area.<br> Example: `6` | NUMERIC |
 
 
 ![**Fig. 4.1.** Schematic of Session Metadata fields related to optical setup (see [Table 4.1](#tbl-4-1)). `distanceTargetToSensor`, `fieldOfView`, `angleLightToSensor`, `measurementAreaDiameter`](images/fig4.1-optical_geometry_fig.png){#f4-1 fig-align="center"}
@@ -63,18 +74,18 @@ Users should **avoid duplicating metadata that are already digitized, maintained
 
 | Metadata Field | Filename Code ([Table 3.2](part3-filenames.qmd#tbl-3-2)) |  Status | Field Description | Data Type |
 |------------|-------|--------|--------------------------|-------|
-| `herbariumCode` | `HC` | Required | Acronym for herbarium or collection (Index Herbariorum code).<br> Examples: `GH`, `P`, `US-Botany`. | TEXT |
-| `specimenId` | `SI` | Required | Identifier for specimen or record (catalog no., barcode, GUID, or collector+number).<br> Examples: `00238762`, `Thorne24070a`. | TEXT |
+| `herbariumCode` | `HC` | Required | Acronym for herbarium or collection (Index Herbariorum code).<br> Examples: `GH`, `P`, `US-Botany` | TEXT |
+| `specimenId` | `SI` | Required | Identifier for specimen or record (catalog no., barcode, GUID, or collector+number).<br> Examples: `00238762`, `Thorne24070a` | TEXT |
 | `scientificName` | - | Optional | Full scientific name at lowest confident rank.<br> Examples: *Quercus bicolor*, *Erythroxylum coca ipadu*. | TEXT |
 | `identificationQualifier` | - | Optional | Uncertainty in taxonomic ID (Darwin Core).<br> Examples: `cf.`, `aff.` | TEXT |
-| `identifiedBy` | - | Optional | Person/group who made the identification.<br> Example: `T. Plowman`. | TEXT |
-| `dateIdentified` | - | Optional | Date of identification.<br> Examples: `1999`, `2004-12-30`. | TEXT |
+| `identifiedBy` | - | Optional | Person/group who made the identification.<br> Example: `T. Plowman` | TEXT |
+| `dateIdentified` | - | Optional | Date of identification.<br> Examples: `1999`, `2004-12-30` | TEXT |
 | `isTempControlled` | - | Optional | Whether storage has active temperature control. | BOOLEAN |
-| `annualTempMin` | - | Optional | Minimum annual storage temperature (°C).<br> Example: `18`. | TEXT |
-| `annualTempMax` | - | Optional | Maximum annual storage temperature (°C).<br> Example: `26`. | TEXT |
+| `annualTempMin` | - | Optional | Minimum annual storage temperature (°C).<br> Example: `18` | TEXT |
+| `annualTempMax` | - | Optional | Maximum annual storage temperature (°C).<br> Example: `26` | TEXT |
 | `isHumidityControlled` | - | Optional | Whether storage has active humidity control. | BOOLEAN |
-| `annualHumidityMin` | - | Optional | Minimum annual storage relative humidity (%).<br> Example: `20`. | TEXT |
-| `annualHumidityMax` | - | Optional | Maximum annual storage relative humidity (%).<br> Example: `60`. | TEXT |
+| `annualHumidityMin` | - | Optional | Minimum annual storage relative humidity (%).<br> Example: `20` | TEXT |
+| `annualHumidityMax` | - | Optional | Maximum annual storage relative humidity (%).<br> Example: `60` | TEXT |
 
 
 
@@ -88,26 +99,26 @@ Fields describing the type, condition, and position of the tissue measured. Incl
 
 | Metadata Field | Filename Code ([Table 3.2](part3-filenames.qmd#tbl-3-2)) |  Status   | Field Description          | Data Type |
 |-----------------------------|--------|--------|-----------------------------|----------|
-| `backgroundClass`             | `BG` | Required | Enumerated abbreviated code from Background Class Codes [Table 4.7](#tbl-4-7) describing the type of background used behind target tissue. Both abbreviated codes and descriptive codes are accepted.<br> Examples: `BGW`, `BGB`, `BGP`. | ENUM<br> ([Table 4.7](#tbl-4-7)) |
-| `hasLowReflectanceBackground` | - | Required | True or False statement that the background (black or paper) has low reflectance as defined as less than 4% reflectance across the spectral range of the instrument. For a paper background, this would be scored `false`.       | BOOLEAN |
+| `backgroundClass`             | `BG` | Required | Enumerated abbreviated code from Background Class Codes [Table 4.7](#tbl-4-7) describing the type of background used behind target tissue. Both abbreviated codes and descriptive codes are accepted.<br> Examples: `BGW`, `BGB`, `BGP` | ENUM<br> ([Table 4.7](#tbl-4-7)) |
+| `hasLowReflectanceBackground` | - | Required | True or False statement that the background (black or paper) has low reflectance as defined as less than 4% reflectance across the spectral range of the instrument. For a paper background, this would be scored `false`       | BOOLEAN |
 | `backgroundDescription`       | - | Cond. Req. | Description of the black or other background material, including manufacturer and product information when available. Not required for paper backgrounds. Required field when tissue has black or other type (not paper) of background.<br> Example: `Musou IR Flock`  | TEXT |
-| `targetClass`                 | `TC` | Required | Free text or enumerated code from Target Class Codes ([Table 4.5](#tbl-4-5)) describing type of tissue or background being measured. Both abbreviated codes and full codes can be used.<br> Examples: `AD`, `perigynium`.       | TEXT or ENUM<br> ([Table 4.5](#tbl-4-5)) |
-| `targetTissueId`              | `TN` | Optional | Character index tracking the measured tissue units when multiple tissues are measured from a single specimen (e.g., `loose1`, `1`, `2`). For compound or more complex structures, projects are encouraged to develop their own consistent naming convention.<br> Examples: `loose1`, `leaflet1`, `petal1`.           | TEXT |
-| `tissueDevelopmentalStage`    | - | Required | Tissue developmental stage as coded in Developmental Stage Class Codes [Table 4.4](#tbl-4-4).<br> Examples: `Mature`, `Uncertain`.         | ENUM<br> ([Table 4.4](#tbl-4-4)) |
+| `targetClass`                 | `TC` | Required | Free text or enumerated code from Target Class Codes ([Table 4.5](#tbl-4-5)) describing type of tissue or background being measured. Both abbreviated codes and full codes can be used.<br> Examples: `AD`, `perigynium`       | TEXT or ENUM<br> ([Table 4.5](#tbl-4-5)) |
+| `targetTissueId`              | `TN` | Optional | Character index tracking the measured tissue units when multiple tissues are measured from a single specimen (e.g., `loose1`, `1`, `2`). For compound or more complex structures, projects are encouraged to develop their own consistent naming convention.<br> Examples: `loose1`, `leaflet1`, `petal1`           | TEXT |
+| `tissueDevelopmentalStage`    | - | Required | Tissue developmental stage as coded in Developmental Stage Class Codes [Table 4.4](#tbl-4-4).<br> Examples: `Mature`, `Uncertain`         | ENUM<br> ([Table 4.4](#tbl-4-4)) |
 | `hasBackgroundInMeasurement`  | - | Required | True or false values indicating that the target tissue does not cover the full measurement area and the background is part of the measurement.      | BOOLEAN |
-| `percentBackgroundInMeasurement` | - | Optional | Numeric estimate for the percentage of the measurement area that is not covered by the target tissue and is background material (black background or herbarium paper). It is recommended to describe the estimation method in the comment field.<br> Example: `25`.          | INTEGER |
+| `percentBackgroundInMeasurement` | - | Optional | Numeric estimate for the percentage of the measurement area that is not covered by the target tissue and is background material (black background or herbarium paper). It is recommended to describe the estimation method in the comment field.<br> Example: `25`          | INTEGER |
 | `hasGlue`                     | - | Required | true/false/uncertain: glue present in measurement area.                | ENUM (true/false/ uncertain) |
 | `hasNonGlueContamination`     | - | Required | True, false, or uncertain values indicating a contaminant other than glue is present in the measurement area. This includes foreign biotic or abiotic agents on the target tissue, such as fungus or preservatives.    | ENUM (true/false/ uncertain) |
-| `measurementFlags`            | - | Optional | Standardized categorical descriptors of the condition of the tissue within the measurement area. Values are selected from the predefined Tissue Descriptor Codes [Table 4.6](#tbl-4-6). Multiple descriptors should be separated with a pipe character (`|`).<br> Example: `GoodPreservation|PathogenPresent`. | ENUM<br> (Table 4.6) |
-| `tissueNotes`               | - | Optional | Free-text field used to record additional observations on the condition of the specimen that may aid interpretation of spectral data. It can be used to clarify or elaborate on descriptors already included in measurementFlags, such as the conditions evidencing the quality of preservation (e.g., a MediumPreservation flag could be explained with the note, 'measurement area discolored and wrinkled'). Notes should specify whether the information applies to the measurement area, the tissue unit, or the specimen as a whole.<br> Examples: `mold in measurement area`, `formaldehyde preserved`.   | TEXT |
-| `tissueLocation`              | - | Optional | The location of the target tissue on the herbarium sheet. For mounted tissues, record as an `X,Y` coordinate in centimeters, with **`0,0` at the top-left corner of the sheet** (e.g., `17,29`; see Fig. 4.2). If the sheet has non-square angles, align it flush with the left-side ruler. For unmounted tissues, provide a descriptive note indicating location.<br> Examples: `17,29`, `envelope TCAD_TN1`.     | TEXT<br> (coordinates preferred) |
+| `measurementFlags`            | - | Optional | Standardized categorical descriptors of the condition of the tissue within the measurement area. Values are selected from the predefined Tissue Descriptor Codes [Table 4.6](#tbl-4-6). Multiple descriptors should be separated with a pipe character (`|`).<br> Example: `GoodPreservation|PathogenPresent` | ENUM<br> (Table 4.6) |
+| `tissueNotes`               | - | Optional | Free-text field used to record additional observations on the condition of the specimen that may aid interpretation of spectral data. It can be used to clarify or elaborate on descriptors already included in measurementFlags, such as the conditions evidencing the quality of preservation (e.g., a MediumPreservation flag could be explained with the note, 'measurement area discolored and wrinkled'). Notes should specify whether the information applies to the measurement area, the tissue unit, or the specimen as a whole.<br> Examples: `mold in measurement area`, `formaldehyde preserved`   | TEXT |
+| `tissueLocation`              | - | Optional | The location of the target tissue on the herbarium sheet. For mounted tissues, record as an `X,Y` coordinate in centimeters, with **`0,0` at the top-left corner of the sheet** (e.g., `17,29`; see Fig. 4.2). If the sheet has non-square angles, align it flush with the left-side ruler. For unmounted tissues, provide a descriptive note indicating location.<br> Examples: `17,29`, `envelope TCAD_TN1`     | TEXT<br> (coordinates preferred) |
 | `comment`                    | - | Optional | Free-text field for recording any additional notes relevant to the measurement, including observations about the instrument, session, specimen, tissue, or data quality that are not captured elsewhere in the metadata.<br> Example: `Amazing specimen.`  | TEXT |
-| `measurementIndex`            | `IDX` | Required | The measurement number index appended to the base filename (Part 3, Table 3.2: IDX) to properly associate each row of metadata with its single, corresponding measurement file.<br> Example: `0001`.               | TEXT |
+| `measurementIndex`            | `IDX` | Required | The measurement number index appended to the base filename (Part 3, Table 3.2: IDX) to properly associate each row of metadata with its single, corresponding measurement file.<br> Example: `0001`               | TEXT |
 
 ![**Fig. 4.2**: Diagram of coordinate system for scoring `tissueLocation` in [Table 4.3: Tissue Metadata](#tbl-4.3). Herbarium sheet is placed on top of the benchtop black background with centimeter rulers at top and left sides for '`x,y`' notation of measurement area (white dashed circles) in centimeters with `0,0` at the top left. Black background cards are placed under unglued portions of leaves. From left to right, tissue `TCAB_TN3` has the location `10,26`, tissue `TCAD_TN2` has location `17,16` and tissue `TCAD_TN1` is stored with a label in a glassine envelope inside the packet with location `envelope TCAD_TN1`. For reference, specimen NEBC_00651639 metadata fields are proposed in [Appendix II](appendix2.qmd). Specimen courtesy of the New England Botanical Society.](images/Fig4.2-coordinatesWh.jpg){#f4-2 fig-align="center"}
 
 
-## 4.2 Controlled Vocabularies
+## 4.2 Controlled Vocabularies {#section4-2}
 
 ### Table 4.4: Developmental Stage Class Codes {#tbl-4-4}
 
@@ -126,7 +137,7 @@ Available codes for enumerating the required `tissueDevelopmentalStage` metadata
 | `NotScored` | Developmental stage was not assessed or recorded for this tissue. |
 
 
-### Table 4.5: Target Class Codes. {#tbl-4-5}
+### Table 4.5: Target Class Codes {#tbl-4-5}
 
 Available codes for enumerating the required `targetClass` metadata [Table 4.3](#tbl-4-3). Either the abbreviated code or the full CamelCase-formatted code (with an initial capital letter) may be used.
 
@@ -197,7 +208,7 @@ Available codes for enumerating the required `tissueBackgroundClass` metadata [T
 | `O`    | `OtherBackground` | Other background material (must be described in metadata). |
 
 
-## 4.3 Guidelines for Data Archiving and Sharing
+## 4.3 Guidelines for Data Archiving and Sharing {#section4-3}
 
 - For each specimen, a copy of **all unprocessed spectral files and associated metadata should be archived** by the herbarium or institution that owns the specimen, or otherwise managed in accordance with institutional data storage practices. Wherever possible, these data should remain **co-located with specimen records** or stored in infrastructure (e.g., institutional servers, cloud services, or collection management systems) that supports long-term stewardship, identifier stability, and integration with specimen metadata.
 
@@ -206,9 +217,9 @@ Available codes for enumerating the required `tissueBackgroundClass` metadata [T
 
 - The IHerbSpec Dataverse supports a **project-based data sharing model**, suitable for laboratory studies, collaborative research projects, and digitization efforts that span multiple collections. Datasets may include raw spectra, metadata spreadsheets, README documentation, processed spectra, and associated trait data. Metadata are reviewed prior to release to promote compliance with the IHerbSpec Protocol and to facilitate interoperability and reuse.
 
-- To enhance discoverability and specimen-level integration, datasets archived in external repositories (including the IHerbSpec Dataverse) may be linked to specimen records using standardized associations (e.g., Darwin Core Resource Relationship terms such as `isReferencedBy`). These links can be prepared in bulk and ingested by specimen portals, allowing users to search for specimens associated with spectral data while the files themselves remain hosted in the most appropriate repository.
+- To enhance discoverability and specimen-level integration, datasets archived in external repositories (including the IHerbSpec Dataverse) may be linked to specimen records using standardized assogciations (e.g., Darwin Core Resource Relationship terms such as `isReferencedBy`). These links can be prepared in bulk and ingested by specimen portals, allowing users to search for specimens associated with spectral data while the files themselves remain hosted in the most appropriate repository.
 
-- To facilitate reuse and analysis, projects may also share **tabular data files** (e.g., `.csv`) containing samples in rows and spectral bands and metadata fields in columns. If processed spectra are included (e.g., interpolated, splice-corrected, continuum-removed), all applied processing steps should be clearly documented.
+- To facilitate reuse and analysis, projects may also share **tabular data files** (e.g., `.csv`) containing samples in rows and spectral bands and metadata fields in columns. If processed spectra are included (e.g., interpolated, splice-corrected), all applied processing steps should be clearly documented.
 
 - When projects include **additional trait data** alongside spectral measurements, contributors should ensure that trait definitions, units, and measurement methods are clearly documented and standardized where possible. Ongoing community efforts will be required to align spectral data with broader trait data standards and repositories.
 
@@ -218,6 +229,7 @@ Available codes for enumerating the required `tissueBackgroundClass` metadata [T
 
 - See an example of spectral data and metadata sharing here:  
   <https://doi.org/10.7910/DVN/LXPHBC>
+  
 ---
 
 ## Navigate the protocol
