--- a/protocol/changes.qmd
+++ b/protocol/changes.qmd
@@ -12,6 +12,12 @@ include-after-body:
 
 ### Current Version: {{< var protocol_version >}}
 
+### Summary of changes since Version 1.2
+
+- Added table to Overview section of Part 4 and added clarification text about excluding filename code prefixes as prepends to metadata values.
+- Added text on communications channels (google group and github discussions) to protocol.qmd in the Team Science section.
+- Added bibtex download to protocol.qmd
+
 ### Summary of changes since Version 1.1, v1.11, and v1.12
 
 - Generated new concept DOI from Zenodo: [10.5281/zenodo.18451589](https://doi.org/10.5281/zenodo.18451589)
