--- a/publications.qmd
+++ b/publications.qmd
@@ -1,5 +1,5 @@
 ---
-title: "Working Group Contributions to Herbarium-based Spectral Research"
+title: "Contributions to Herbarium-based Spectral Science"
 page-layout: full
 ---
 
@@ -26,5 +26,9 @@ Neto-Bradley, B.M., P. Bonnet, H. Goëau, A. Joly, J. Cavender-Bares, D.A. Coome
 
 White, D.M., J. Cavender-Bares, C.C. Davis, J.A. Guzmán Q., S. Kothari, J.M. Robles, J.E. Meireles. **Seeing herbaria in a new light: Leaf reflectance spectroscopy unlocks trait and classification modeling in plant biodiversity collections**. *New Phytologist*  (2025). 
 [https://doi.org/10.1111/nph.70357](https://doi.org/10.1111/nph.70357)
+
+---
+
+Boughalmi, K., P.G. Santacruz Endara, L.A. Bennett, M. Ecarnot, S. Bazan, D. Bastianelli, L. Bonnal, T.L.P Couvreur. **Discrimination of Annonaceae using herbarium leaf reflectance spectra under limited sample size conditions**. *bioRxiv* (2025). [https://doi.org/10.1101/2025.09.02.673631](https://doi.org/10.1101/2025.09.02.673631)
 
 </div>
